# universe

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum
__tests__/e2e/: agent_test.go  defaults_test.go  destroy_test.go  elements_test.go  export_test.go  gate_test.go  inspect_test.go  journal_test.go  life_test.go  lifecycle_test.go  list_test.go  physics_test.go  session_test.go  spawn_test.go  technologies_test.go
__tests__/mock/: mock-claude.sh
cli/: attach.go  config.go  defaults.go  destroy.go  helpers.go  init.go  init_cmd.go  inspect.go  list.go  logs.go  root.go  spawn.go
cli/agent/: agent.go  export.go  init.go  inspect.go  list.go  spawn.go
cli/ui/: format.go  stepper.go  style.go  table.go
cmd/universe/: main.go
container/: Dockerfile  Dockerfile.test  embed.go
container/gate/: Cargo.toml
container/gate/src/: acp.rs  health.rs  main.rs  recovery.rs
internal/agent/: agent.go
internal/architect/: agent.go  architect.go  destroy.go  spawn.go
internal/backend/: backend.go  docker.go  docker_integration_test.go
internal/config/: config.go  models.go  names.go  paths.go
internal/gate/: bridge.go  gate.go  gate_test.go  handlers.go  server.go  wrapper.go  wrapper_test.go
internal/id/: id.go
internal/journal/: journal.go  journal_test.go
internal/manifest/: life.go  manifest.go
internal/mind/: archive.go  inspect.go  mind.go  mind_test.go
internal/physics/: physics.go  physics_test.go
internal/procmgr/: procmgr.go  procmgr_test.go
internal/session/: session.go  session_test.go
wordlist/: words.go
(+20 files in other folders)
